Add first check for zero, but results not displaying for any input.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   border-style: inset;
 }
 body{
-  background-color: black;
+  background-color: lightblue;
   text-align: center;
+  color: black;
 }
